Retain ambiguous votes across bounded shutdown